Fix footer text-align

--- a/style/style.css
+++ b/style/style.css
@@ -345,6 +345,8 @@ img {
 
 #footer p {
   margin-bottom: 2rem;
+  text-align: left;
+  align-self: flex-start;
 }
 
 .footer-links {
@@ -540,7 +542,6 @@ img {
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    /* text-align: center; */
   }
 
   #card-2 .container {
